--- a/UPOSS/Controls/Dialog/CashierPaymentDialog.xaml
+++ b/UPOSS/Controls/Dialog/CashierPaymentDialog.xaml
@@ -281,11 +281,13 @@
                                         <Grid Grid.Row="2" Margin="5">
                                             <ComboBox Name="comboboxCardType" SelectedIndex="0" HorizontalContentAlignment="Center" 
                                                       HorizontalAlignment="Center" VerticalAlignment="Center" Width="300"
-                                                      FontSize="25" BorderBrush="White" BorderThickness="3" SelectedValuePath="Content">
+                                                      FontSize="25" BorderBrush="White" BorderThickness="3" SelectedValuePath="Content"
+                                                      SelectionChanged="comboboxCardType_SelectionChanged">
                                                 <ComboBoxItem Content="Visa"/>
                                                 <ComboBoxItem Content="Master"/>
                                                 <ComboBoxItem Content="Credit"/>
                                                 <ComboBoxItem Content="Debit"/>
+                                                <ComboBoxItem Content="E-Wallet"/>
                                                 <ComboBoxItem Content="Other"/>
                                             </ComboBox>
                                         </Grid>
