--- a/UPOSS/Controls/Dialog/ProductInputDialog.xaml
+++ b/UPOSS/Controls/Dialog/ProductInputDialog.xaml
@@ -25,6 +25,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <materialDesign:PackIcon Kind="Information" Grid.Column="0" VerticalAlignment="Center" Width="32" Height="32" Grid.RowSpan="2" Margin="20,0"/>
@@ -107,17 +108,21 @@
 
                 <WrapPanel Orientation="Horizontal" Margin="5 0">
                     <TextBlock x:Name="tbkQuantity" Text="Quantity :" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
-                    <TextBox Name="tbQuantity" Margin="10 0" FontSize="15" MinWidth="150"/>
-                </WrapPanel>
-
-                <WrapPanel Orientation="Horizontal" Margin="5 0">
-                    <TextBlock x:Name="tbkNote" Text="Note: you can update branch quantity by selecting record from the quantity list ;)" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
+                    <TextBox Name="tbQuantity" Margin="10 0" FontSize="15" MinWidth="150" PreviewTextInput="tbQuantity_PreviewTextInput"/>
                 </WrapPanel>
             </StackPanel>
         </Grid>
+        
+        <!--row 4-->
+        <Grid Grid.Column="1" Grid.Row="4" Margin="0 10">
+            <WrapPanel Orientation="Horizontal" Margin="5 0">
+                <TextBlock x:Name="tbkNote" Text="Note: you can update branch quantity by selecting record from the quantity list ;)" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
+            </WrapPanel>
+        </Grid>
 
-        <WrapPanel Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
-            <Button IsDefault="True" Name="btnDialogOk" Click="btnDialogOk_Click" MinWidth="60" Margin="0,0,10,0">_Ok</Button>
+        <!--row 5-->
+        <WrapPanel Grid.Row="5" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
+            <Button IsDefault="True" Name="btnDialogOk" Click="btnDialogOk_Click" MinWidth="60" Margin="0,0,10,0">Ok</Button>
             <Button IsCancel="True" MinWidth="60">_Cancel</Button>
         </WrapPanel>
     </Grid>
